SVN/Unreleased
==============

  - try to retrieve project name from svn urls [gawel]

  - use a random minute in cron-scheduler when we have more than one repository
    [gawel]

  - deactive virtualenv under cygwin, this doesn't work [thefunny]

  - 'environment' can be used to specify environment variable on
    slaves [thefunny]

  - 'eggs' can be used to install extra eggs in slaves [thefunny]

  - Refactored the functionality of the 'projects' recipe into the
    'project' recipe and removed the 'projects' entry point. [dokai]

  - Refactored the functionality of the 'pollers' recipe into the
    'poller' recipe and removed the 'pollers' entry point. [dokai]

  - Poller config files are now named after the section name, allowing
    multiple poller sections to be defined. [dokai]

0.2.1 (2008-05-21)
==================

  - Fixed a critical typo in the slave name configuration in
    fullexample.txt [dokai]

0.2.0 (2008-05-21)
==================

  - Added irc options so you can attach an irc bot to the master buildbot
    [mustapha]

  - Allow public_html customization [gawel]

  - Added custom about page to link to collective.buildout [gawel]

  - Added support for Git repositories [dokai]

  - Refactored the repository URL configuration. For Subversion, you
    should use only the ``repository`` option to specify a full URL to
    the desired branch (trunk, tag or branch) that will be built. For
    Git in addition to setting the ``repository`` option you can use
    the ``branch`` option to specify a specific branch to build. By
    default the ``master`` branch will be used for Git
    repositories. [dokai]

  - Cleaned up a lot of redundant imports. [dokai]

  - Updated the documentation and examples. [dokai]

  - Deprecated the collective.buildbot:projects recipe [dokai]

  - Fixed problem with missing twistd.log files on first run [dokai]

  - Fixed bug that prevented the master from starting if there weren't
    any SVN pollers configured. [dokai]
