@@ -168,6 +168,7 @@ in the buildout section.
     ...    ${buildout:svn}/my.package/trunk
     ...    ${buildout:svn}/other.package/tags/1.2.3
     ...    ${buildout:svn}/third.package/branches/foobar
+    ...    ${buildout:svn}/third.package/branches/another
     ... """)
 
 When we run the buildout we can see that it generated a separate
@@ -176,10 +177,10 @@ configuration file for each project representing a single repository::
     >>> print system(buildout)
     Uninstalling my.package.
     Installing my_project.
-    Generated config '/sample-buildout/parts/projects/my_project_0.cfg'.
-    Generated config '/sample-buildout/parts/projects/my_project_1.cfg'.
-    Generated config '/sample-buildout/parts/projects/my_project_2.cfg'.
-
+    Generated config '/sample-buildout/parts/projects/my.package.cfg'.
+    Generated config '/sample-buildout/parts/projects/other.package.cfg'.
+    Generated config '/sample-buildout/parts/projects/third.package.cfg'.
+    Generated config '/sample-buildout/parts/projects/third.package_2.cfg'.
 
 
 The projects recipe
